[package]
name = "socks5"
version = "0.1.0"
authors = ["s.alifarrokh <s.alifarrokh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
structopt = "0.3.16"
lazy_static = "1.4.0"