[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead.
[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
socks5-async = { path = "../socks5-async" }
futures = "0.3.5"
log = "0.4.11"
pretty_env_logger = "0.4.0"

[[example]]
name = "server"
path = "server.rs"

[[example]]
name = "connect"
path = "connect.rs"

[[example]]
name = "http"
path = "http.rs"