[package]
name = "socks5-async"
version = "0.1.3"
description = "Asynchronous SOCKS5 Proxy server/client written in Rust"
repository = "https://github.com/alifarrokh/socks5-async"
readme = "../README.md"
license = "MIT"
authors = ["s.alifarrokh <s.alifarrokh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
log = "0.4.11"